# gamezap-lib

./: .gitignore  Cargo.toml
examples/: example.rs
examples/components/: compute_monitor_component.rs  keyboard_input_component.rs  mouse_input_component.rs  transparency_component.rs  ui_component.rs
examples/shaders/: compute.wgsl  compute_2.wgsl  compute_texture.wgsl  frag.wgsl  frag2.wgsl  frag3.wgsl  vert.wgsl
src/: camera.rs  compute.rs  lib.rs  light.rs  materials.rs  model.rs  module_manager.rs  pipeline.rs  pipeline_manager.rs  renderer.rs  texture.rs  ui_manager.rs
src/default-shaders/: texture_frag.wgsl  texture_vert.wgsl
src/ecs/: component.rs  concepts.rs  entity.rs  material.rs  scene.rs
src/ecs/components/: camera_component.rs  mesh_component.rs  physics_component.rs  text_component.rs  transform_component.rs  ui_component.rs
src/engine_management/: rendering_management.rs  window_and_event_management.rs
src/engine_support/: texture_support.rs
