[package]
name = "gamezap"
version = "0.5.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
wgpu = "0.17.0"
anyhow = "1.0.72"
nalgebra = "0.32.3"
tobj = { version = "4.0.2", features = ["async"] }
cfg-if = "1.0.0"
time = "0.3.24"
smaa = "0.11.0"
flume = "0.11.0"
futures = "0.3.29"
tokio = {version = "1.35.1", features = ["full"]}
cool_utils = {git = "https://github.com/GameHunter101/cool_utils.git"}
dyn-clone = "1.0.17"
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
imgui-sdl2 = "0.15.3"
algoe = {git = "https://github.com/GameHunter101/Algoe" }

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["raw-window-handle"]
