[package]
name = "gamezap"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
wgpu = "22.1.0"
anyhow = "1.0.72"
nalgebra = "0.32.3"
tobj = { version = "4.0.2", features = ["async"] }
cfg-if = "1.0.0"
time = "0.3.24"
smaa = "0.15.0"
flume = "0.11.0"
futures = "0.3.29"
tokio = {version = "1.35.1", features = ["full"]}
cool_utils = {git = "https://github.com/GameHunter101/cool_utils.git"}
dyn-clone = "1.0.17"
imgui = {version = "0.12.0", features = ["tables-api"]}
imgui-wgpu = {git = "https://github.com/GameHunter101/imgui-wgpu-rs"}
imgui-sdl2-support = "0.13.0"
algoe = {git = "https://github.com/GameHunter101/Algoe" }
enum-as-inner = "0.6.0"
glyphon = "0.6.0"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["raw-window-handle"]
