[package]
name = "gamezap"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
env_logger = "0.10.0"
wgpu = "22.1.0"
nalgebra = "0.32.3"
smaa = "0.15.0"
futures = "0.3.30"
tokio = {version = "1.40.0", features = ["full"]}
imgui = {version = "0.12.0", features = ["tables-api"]}
imgui-wgpu = {git = "https://github.com/GameHunter101/imgui-wgpu-rs"}
imgui-sdl2-support = "0.13.0"
winit = "0.30.5"

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

